--- a/.github/workflows/linear-slack-pr-opened.yml
+++ b/.github/workflows/linear-slack-pr-opened.yml
@@ -60,7 +60,7 @@ jobs:
           echo "Found tickets: ${TICKETS}"
 
       - name: Send Slack notification
-        if: steps.extract.outputs.tickets != '[]'
+        if: steps.extract.outputs.tickets != '[]' && (github.event.action == 'opened' || github.event.action == 'reopened')
         env:
           SLACK_RELEASE_CHANGELOG_WEBHOOK: ${{ secrets.SLACK_RELEASE_CHANGELOG_WEBHOOK }}
           LINEAR_API_KEY: ${{ secrets.LINEAR_API_KEY }}
@@ -78,14 +78,39 @@ jobs:
           script: |
             const tickets = ${{ steps.extract.outputs.tickets }};
             const ticketList = tickets.map(t => `- ${t}`).join('\n');
-            const body = `## Linear Tickets\n\nThis PR includes the following Linear tickets:\n\n${ticketList}\n\n> Notification sent to product team on Slack.`;
+            const marker = '<!-- linear-tickets-comment -->';
+            const body = `${marker}\n## Linear Tickets\n\nThis PR includes the following Linear tickets:\n\n${ticketList}\n\n> Notification sent to product team on Slack.`;
 
-            github.rest.issues.createComment({
+            // Find existing comment
+            const comments = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: body
             });
+
+            const existingComment = comments.data.find(comment =>
+              comment.body.includes(marker)
+            );
+
+            if (existingComment) {
+              // Update existing comment
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existingComment.id,
+                body: body
+              });
+              console.log('Updated existing comment');
+            } else {
+              // Create new comment
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+              console.log('Created new comment');
+            }
 
       - name: Summary
         if: steps.extract.outputs.tickets != '[]'
