--- a/.github/workflows/codeowners-approved-slack.yml
+++ b/.github/workflows/codeowners-approved-slack.yml
@@ -8,6 +8,11 @@ on:
         required: false
         type: boolean
         default: true
+      require-full-approval:
+        description: "If true, only notify when reviewDecision is APPROVED. If false, notify on first approval."
+        required: false
+        type: boolean
+        default: false
       slack-message-prefix:
         description: "Custom prefix for Slack message (emoji + text)"
         required: false
@@ -84,7 +89,7 @@ jobs:
       - name: Skip notification (conditions not met)
         if: |
           (inputs.skip-draft && steps.pr.outputs.is_draft == 'true') ||
-          steps.pr.outputs.review_decision != 'APPROVED' ||
+          (inputs.require-full-approval && steps.pr.outputs.review_decision != 'APPROVED') ||
           steps.pr.outputs.already_notified == 'true'
         run: |
           echo "### Notification Skipped" >> $GITHUB_STEP_SUMMARY
@@ -98,7 +103,7 @@ jobs:
       - name: Post to Slack
         if: |
           (inputs.skip-draft == false || steps.pr.outputs.is_draft != 'true') &&
-          steps.pr.outputs.review_decision == 'APPROVED' &&
+          (inputs.require-full-approval == false || steps.pr.outputs.review_decision == 'APPROVED') &&
           steps.pr.outputs.already_notified != 'true'
         uses: slackapi/slack-github-action@v2
         with:
@@ -112,7 +117,7 @@ jobs:
       - name: Add marker comment (dedupe for this SHA)
         if: |
           (inputs.skip-draft == false || steps.pr.outputs.is_draft != 'true') &&
-          steps.pr.outputs.review_decision == 'APPROVED' &&
+          (inputs.require-full-approval == false || steps.pr.outputs.review_decision == 'APPROVED') &&
           steps.pr.outputs.already_notified != 'true'
         uses: actions/github-script@v7
         with:
@@ -133,7 +138,7 @@ jobs:
       - name: Summary (notification sent)
         if: |
           (inputs.skip-draft == false || steps.pr.outputs.is_draft != 'true') &&
-          steps.pr.outputs.review_decision == 'APPROVED' &&
+          (inputs.require-full-approval == false || steps.pr.outputs.review_decision == 'APPROVED') &&
           steps.pr.outputs.already_notified != 'true'
         run: |
           echo "### Slack Notification Sent" >> $GITHUB_STEP_SUMMARY
